# sports_events_selections_management_api

./: .gitignore  README.md  docker-compose.yaml
backend/: .env.sample  Dockerfile  pyproject.toml  run.sh
backend/alembic/: env.py
backend/alembic/versions/: d28f489a20e9_initial.py
backend/app/: main.py
backend/app/api_routes/: api.py  deps.py
backend/app/api_routes/routes/: events.py  selections.py  sports.py
backend/app/config/: app_config.py
backend/app/db/: session.py
backend/app/db/repository/: events.py  selections.py  sports.py
backend/app/schemas/: base.py  event.py  selection.py  sport.py
backend/tests/: conftest.py  test_events.py  test_selections.py  test_sports.py  utils.py
