[tool.poetry]
name = "betting-rest"
version = "0.1.0"
description = ""
authors = ["Flavio Galon <flaviogalon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.1"
uvicorn = "^0.17.6"
pydantic = "^1.9.0"
databases = {extras = ["postgresql"], version = "^0.5.5"}
SQLAlchemy = "^1.4.35"
alembic = "^1.7.7"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pylint = "^2.13.5"
pytest-asyncio = "^0.18.3"
httpx = "^0.22.0"
asgi-lifespan = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"

[tool.pytest.ini_options]
asyncio_mode = "strict"
